losing overflow scroll for some reason made my header bug out with its margin, so i needed to add a bunch of break lines for now

--- a/src/App.css
+++ b/src/App.css
@@ -177,7 +177,8 @@ button {
   transition: 0.8s;
 }
 .sghHeader {
-  margin-top: 250px;
+  /* position: absolute; */
+  /* margin-top: 250px; */
   background-color: rgba(245, 245, 245, 0.7);
   padding: 10px;
   text-align: center;
@@ -220,7 +221,7 @@ button {
 }
 .coverZozopic {
   position: fixed;
-  margin-top: 60px;
+  margin-top: 65px;
   margin-left: 273px;
   max-width: 45px;
   max-height: 45px;
